# consumerDB

./: .editorconfig  .gitignore  README.md  Security.md  pyproject.toml  requirements.txt  send_testers.py  vercel.json
App/: __init__.py  auth.py  beautyadvisors.py  db.py  entity.py  forms.py  mailchimp_api.py  schema.sql  stores.py
App/static/scripts/: main.js
App/static/styles/: main.css
App/templates/: base.html
App/templates/auth/: login.html
App/templates/beautyadvisors/: index.html  update.html
App/templates/entity/: index.html
App/templates/forms/: colombia.html  panama.html
App/templates/stores/: create.html
api/: __init__.py  auth.py  beautyadvisors.py  brands.py  db.py  entity.py  forms.py  migrate.sql  pos.py  schema.sql  stores.py  testers.py
api/static/scripts/: main.js
api/static/styles/: main.css
api/templates/: base.html
api/templates/auth/: login.html  register.html  update_user.html  users.html
api/templates/beautyadvisors/: create.html  update.html
api/templates/brands/: create.html  index.html  update.html
api/templates/entity/: create.html  update.html
api/templates/forms/: bloqueado.html  colombia.html  costarica.html  index.html  panama.html  trequest.html
api/templates/pos/: create.html  index.html  update.html
api/templates/stores/: create.html  index.html  update.html
api/templates/testers/: create.html  export_testers.html  import_testers.html  index.html  update.html
